--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: "Sora", sans-serif;
 }
 
 body {
-  background-color: bisque;
+  background-color: rgb(255, 255, 255);
   padding: 100px 150px;
 }
 
@@ -13,7 +14,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 40vh;
+  height: 60vh;
   color: white;
   display: flex;
   flex-direction: column;
@@ -26,6 +27,7 @@ body {
   height: 20vh;
   width: 800px;
   margin-right: 150px;
+  margin-bottom: 100px;
   padding: 10px;
 }
 .header .header-txt p {
@@ -34,42 +36,43 @@ body {
   padding: 10px;
   margin-top: 30px;
 }
-
-.conteudo-pai {
-  background-color: black;
-  height: 60vh;
-  width: 100%;
-  border-top: 1px solid rgb(20, 23, 68);
-  display: flex;
+.header .btn-1 {
+  background-color: rgb(28, 63, 158);
+  padding: 10px;
+  color: white;
+  border-radius: 7px;
+  border: none;
+  margin: 8px;
+  cursor: pointer;
+  margin-left: 15px;
 }
-.conteudo-pai .conteudo {
-  background-color: red;
-  border: 1px solid red;
-  width: 30%;
-  height: 400px;
-  margin: auto 20px;
+.header .btn-1:hover {
+  background-color: rgb(37, 82, 206);
 }
 
 .h1 {
-  padding: 10px;
-  margin-left: 20px;
+  background-color: rgb(184, 179, 179);
+  padding: 10px 0 10px 30px;
 }
 
 .main {
   display: flex;
-  margin: 10px;
   padding: 10px;
+  background-color: rgb(184, 179, 179);
 }
 .main .main-2 {
-  border-left: 3px solid black;
+  border-left: 3px solid rgb(28, 63, 158);
   padding: 20px;
-  margin: 10px;
+  margin: 20px;
   width: 20%;
   font-size: 18px;
 }
+.main .main-2 h2 {
+  margin-bottom: 40px;
+}
 
 .historia {
-  background-color: rgb(29, 29, 29);
+  background-color: rgb(243, 237, 237);
   padding: 50px;
   display: flex;
 }
@@ -77,12 +80,20 @@ body {
   padding: 20px;
   margin-right: 20px;
   font-size: 18px;
-  color: rgb(255, 255, 255);
+  color: black;
+  text-align: justify;
+}
+.historia .historia-img img {
+  border-radius: 50px;
+  margin-top: 80px;
+  width: 500px;
 }
 
 .analisetec {
-  background-color: bisque;
+  background-color: rgb(243, 237, 237);
   padding: 20px;
+  text-align: justify;
+  margin: auto;
 }
 
 .grafico-container {
@@ -93,21 +104,21 @@ body {
   flex-wrap: wrap;
   padding-top: 100px;
   padding-bottom: 50px;
-  background-color: bisque;
+  background-color: rgb(243, 237, 237);
 }
 .grafico-container .grafico {
   position: relative;
   width: 350px;
   height: 250px;
-  background: rgb(49, 54, 79);
+  background: rgb(184, 179, 179);
   box-shadow: 0 35px 80px rgba(0, 0, 0, 0.15);
   transition: 0.5s;
   justify-content: center;
   display: flex;
 }
 .grafico-container .grafico:hover {
-  height: 400px;
-  background: #000000;
+  height: 500px;
+  background: rgb(37, 82, 206);
   transition: 0.5s;
 }
 .grafico-container .grafico-img {
@@ -149,7 +160,7 @@ body {
   font-size: 1.5rem;
   font-weight: 700;
   line-height: 3rem;
-  color: rgb(230, 230, 246);
+  color: black;
   margin-top: -10px;
 }
 .grafico-container .grafico-text p {
@@ -164,52 +175,103 @@ body {
   background-size: cover;
   display: flex;
   align-items: center;
-  padding: 20px;
+  padding: 10px;
+  height: 120vh;
 }
 .negociacao .negociacao-um {
-  width: 40%;
+  width: 30%;
   font-size: 18px;
   margin-left: 100px;
   color: white;
+  text-align: justify;
 }
 .negociacao .negociacao-text-um {
   display: flex;
-  margin-left: 200px;
-  width: 30%;
   flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  width: 70%;
+  height: 90vh;
 }
 .negociacao .negociacao-text {
   margin: 10px;
-  background-color: bisque;
+  background-color: rgb(184, 179, 179);
   border: 1px solid black;
   border-radius: 25px;
-  height: 13vh;
-  padding: 10px;
+  height: 15vh;
+  padding: 30px;
+  width: 70%;
   text-align: center;
+}
+.negociacao .negociacao-text:hover {
+  background-color: rgb(230, 230, 246);
 }
 
 .conatiner-bolsa {
   align-items: center;
   text-align: center;
   justify-content: center;
-  padding: 30px;
+  background-color: rgb(243, 237, 237);
+  padding-bottom: 200px;
 }
 .conatiner-bolsa .bolsas {
   display: flex;
   align-items: center;
   text-align: center;
   justify-content: center;
+  padding: 30px;
 }
 .conatiner-bolsa .bolsas-text {
-  border: 1px solid green;
   margin: 10px;
   width: 30%;
   height: 45vh;
-  padding: 30px;
+  padding: 60px;
 }
 .conatiner-bolsa .bolsa-container {
   width: 60%;
   margin: auto;
-  margin-top: 40px;
   margin-bottom: 40px;
+  color: rgb(28, 63, 158);
+  padding-top: 60px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+.btn {
+  background-color: rgb(28, 63, 158);
+  padding: 10px;
+  color: white;
+  border-radius: 7px;
+  border: none;
+  margin-top: 20px;
+  cursor: pointer;
+}
+.btn:hover {
+  background-color: rgb(37, 82, 206);
+}
+
+.b3 {
+  background-color: rgb(243, 237, 237);
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  padding: 30px;
+  padding-top: 100px;
+}
+.b3 .b3-text {
+  width: 40%;
+  text-align: center;
+  padding: 20px;
+  margin: 20px;
+  margin-left: 50px;
+}
+
+h2, h3 {
+  color: rgb(28, 63, 158);
 }/*# sourceMappingURL=style.css.map */
