--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,8 @@
 body {
   background-color: rgb(255, 255, 255);
   padding: 100px 150px;
+  margin: 0;
+  padding: 0;
 }
 
 
@@ -270,9 +272,6 @@ body {
 
 
 
-  .bolsas {
-   
-  }
 
   .bolsas-text {
     margin: 20px;
@@ -438,18 +437,23 @@ h2, h3{
 
 
 /* Estilos para telas menores ou iguais a 400px de largura */
-@media (max-width: 500px){
+@media screen and (max-width: 500px){
 
   * {
     margin: 0;
     padding: 0;
     font-family: "Sora", sans-serif;
     font-size: 12px;
+ 
     
   } 
 
   main{
-    width: 100vw;
+    width:  100vw;
+    margin: 0;
+    padding: 0;
+    border: 0;
+
   }
   
 
@@ -457,6 +461,9 @@ h2, h3{
   
   body {
     background-color: rgb(255, 255, 255);
+    margin:0;
+    padding: 0;
+
   
   }
   
@@ -471,19 +478,26 @@ h2, h3{
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 150vh;
+    height: 80vh;
     color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
     font-size: 30px;
+
+    h1{
+      font-size: 20px ;
+
+    }
   
     .header-txt {
       height: 30vh;
       width: 300px;
       align-items: center;
-      text-align: center;
+      text-align: justify;
       margin: auto;
+      margin-top: 15px;
+  
 
      
     }
@@ -515,6 +529,9 @@ h2, h3{
   
   .h1 {
     background-color: rgb(184, 179, 179);
+    font-size: 30px;
+    text-align: center;
+    color: rgb(37, 82, 206);
   }
 
   .historia {
@@ -552,6 +569,7 @@ h2, h3{
 
   .main-2 h2 {
     margin-bottom: 20px;
+
   }
 
 
@@ -565,16 +583,18 @@ h2, h3{
     background-repeat: no-repeat;
     background-size: cover;
     align-items: center;
-    height: 300vh;
+    height: 180vh;
     display: flex;
     flex-direction: column;
     margin: 0;
+
+
   
     .negociacao-um {
       width: 80%;
       padding: 10px;
       margin: 0;
-      top: 0;
+      margin-bottom: 80px;
       color: white;
       text-align: justify;
     }
@@ -608,14 +628,13 @@ h2, h3{
   }
 
 
-  .bolsa-container{
-    font-size: 10px;
-    margin: 0;
-    padding: 15px;
+  .bolsa-container h1{
+    padding: 0;
     text-align: center;
-    width: 100%;
-    text-align: justify;
-    margin-top: 50px;
+    align-items: center;
+    width: 100vw;
+    margin: 0;
+  
   }
 
   .bolsas {
@@ -651,7 +670,7 @@ h2, h3{
   }
 
   .btn {
-    padding: 10px 20px;
+    padding: 10px 10px;
     font-size: 14px;
   }
 
@@ -660,14 +679,8 @@ h2, h3{
   .b3 {
     flex-direction: column;
     margin: 0;
-    text-align: justify;
     padding: 10px;
-  
 
-  }
-
-  .b3 img {
-    width: 200px; /* Reduzindo o tamanho da imagem para telas menores */
   }
 
   .b3 .b3-text {
@@ -675,6 +688,7 @@ h2, h3{
     padding: 50px;
     width: 100%;
     text-align: justify;
+   
 
   
   }
