--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
   margin: 0;
   padding: 0;
   font-family: "Sora", sans-serif;
-  overflow: hidden;
 }
 
 body {
@@ -17,21 +16,19 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 70vh;
+  height: 50vh;
   color: white;
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
-  margin-right: 100px;
   justify-content: center;
   font-size: 30px;
+  padding: 30px;
 }
 .header .header-txt {
-  height: 20vh;
   width: 800px;
-  margin-right: 150px;
-  margin-bottom: 100px;
-  padding: 10px;
+  margin-bottom: 20px;
+  padding: 30px;
+  margin: auto;
 }
 .header .header-txt p {
   font-size: 16px;
@@ -179,32 +176,29 @@ body {
   display: flex;
   align-items: center;
   padding: 10px;
-  height: 135vh;
 }
 .negociacao .negociacao-um {
-  width: 30%;
+  width: 40%;
   font-size: 18px;
   margin-left: 100px;
   color: white;
   text-align: justify;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .negociacao .negociacao-text-um {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-  width: 70%;
+  width: 50%;
   height: 90vh;
 }
 .negociacao .negociacao-text {
-  margin: 10px;
+  margin: 20px;
   background-color: rgb(184, 179, 179);
   border: 1px solid black;
   border-radius: 25px;
-  height: 15vh;
-  padding: 30px;
-  width: 70%;
+  padding: 10px;
   text-align: center;
 }
 .negociacao .negociacao-text:hover {
@@ -296,6 +290,9 @@ a {
   padding: 20px;
   margin: 20px;
   margin-left: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 h2, h3 {
@@ -361,19 +358,21 @@ h2, h3 {
     background-repeat: no-repeat;
     background-size: cover;
     align-items: center;
-    height: 130vh;
     display: flex;
     flex-direction: column;
     margin: 0;
   }
   .negociacao .negociacao-um {
-    width: 60%;
+    width: 80%;
     padding: 10px;
     padding-top: 50px;
     margin: 0;
     margin-bottom: 30px;
     color: white;
     text-align: justify;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   .negociacao .negociacao-text-um {
     align-items: center;
@@ -387,10 +386,11 @@ h2, h3 {
     background-color: rgb(184, 179, 179);
     border: 1px solid black;
     border-radius: 25px;
-    height: 55vh;
+    height: 50vh;
     width: 200px;
     text-align: justify;
     margin-bottom: 20px;
+    padding: 20px;
   }
   .negociacao .negociacao-text h3 {
     text-align: center;
@@ -400,6 +400,9 @@ h2, h3 {
   }
   .dois {
     margin-top: 150px;
+  }
+  .nyse {
+    margin-top: 70px;
   }
 }
 @media screen and (max-width: 1000px) {
@@ -516,14 +519,15 @@ h2, h3 {
     text-align: center;
     justify-content: center;
     margin: auto;
+    display: flex;
+    flex-direction: column;
   }
   .negociacao .negociacao-text {
     margin: 10px;
     background-color: rgb(184, 179, 179);
     border: 1px solid black;
     border-radius: 25px;
-    height: 50vh;
-    width: 100%;
+    width: 700px;
     text-align: justify;
     margin-bottom: 20px;
   }
@@ -536,6 +540,15 @@ h2, h3 {
   .negociacao .btn {
     width: 200px;
     margin-top: 15px;
+  }
+  .um .bolsas-text {
+    padding-bottom: 0;
+    margin-bottom: 0;
+    height: 30vh;
+  }
+  .dois .bolsas-text {
+    padding-top: 0;
+    margin-top: 0;
   }
   .b3 {
     flex-direction: column;
@@ -557,6 +570,9 @@ h2, h3 {
   .b3-text .btn {
     width: 200px;
     margin-top: 15px;
+  }
+  .nyse {
+    margin-top: 31px;
   }
 }
 /* Estilos para telas menores ou iguais a 400px de largura */
@@ -594,7 +610,7 @@ h2, h3 {
     font-size: 20px;
   }
   .header .header-txt {
-    height: 30vh;
+    height: 95vh;
     width: 300px;
     align-items: center;
     text-align: justify;
@@ -662,46 +678,36 @@ h2, h3 {
     background-repeat: no-repeat;
     background-size: cover;
     align-items: center;
-    height: 220vh;
     display: flex;
     flex-direction: column;
     margin: 0;
+    min-height: 180vh;
+    padding-bottom: 80px;
   }
   .negociacao .negociacao-um {
-    width: 80%;
     padding: 10px;
-    margin-bottom: 10px;
-    margin-bottom: 80px;
+    padding-bottom: 10px;
     color: white;
     text-align: justify;
-  }
-  .negociacao .negociacao-text-um {
-    align-items: center;
-    text-align: center;
-    justify-content: center;
     display: flex;
     flex-direction: column;
-    margin: auto;
+  }
+  .negociacao .negociacao-text-um {
+    display: flex;
+    flex-direction: column;
   }
   .negociacao .negociacao-text {
     background-color: rgb(184, 179, 179);
     border: 1px solid black;
     border-radius: 25px;
-    height: 25vh;
-    margin: 10px;
-    width: 250px;
     text-align: justify;
-    margin-bottom: 20px;
+    width: 300px;
   }
-  .negociacao .negociacao-text h3 {
+  .negociacao .negociacao-text h3 p {
     text-align: center;
   }
   .negociacao .negociacao-text:hover {
     background-color: rgb(230, 230, 246);
-  }
-  .negociacao .btn {
-    width: 200px;
-    margin-top: 15px;
   }
   .bolsa-container h1 {
     padding: 20px;
@@ -723,6 +729,7 @@ h2, h3 {
   .dois {
     display: flex;
     flex-direction: column;
+    margin-top: 10px;
   }
   .bolsas .bolsas-text {
     width: 100%;
