--- a/style.scss
+++ b/style.scss
@@ -2,7 +2,6 @@
   margin: 0;
   padding: 0;
   font-family: "Sora", sans-serif;
-  overflow: hidden;
 }
 
 
@@ -25,21 +24,21 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 70vh;
+  height: 50vh;
   color: white;
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
-  margin-right: 100px;
   justify-content: center;
   font-size: 30px;
+  padding: 30px;
 
   .header-txt {
-    height: 20vh;
     width: 800px;
-    margin-right: 150px;
-    margin-bottom: 100px;
-    padding: 10px;
+    margin-bottom: 20px;
+    padding: 30px;
+  
+    margin: auto;
+  
   }
 
   .header-txt p {
@@ -214,35 +213,36 @@ body {
   display: flex;
   align-items: center;
   padding: 10px;
-  height: 135vh;
+
 
   .negociacao-um {
-    width: 30%;
+    width: 40%;
     font-size: 18px;
     margin-left: 100px;
     color: white;
     text-align: justify;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    
   }
 
   .negociacao-text-um {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    width: 70%;
+  
+    width: 50%;
     height: 90vh;
  
   }
 
   .negociacao-text {
-    margin: 10px;
+    margin: 20px;
     background-color: rgb(184, 179, 179);
     border: 1px solid black;
     border-radius: 25px;
-    height: 15vh;
-    padding: 30px;
-    width: 70%;
+    padding: 10px;
     text-align: center;
   }
 
@@ -358,6 +358,10 @@ body {
     padding: 20px;
     margin: 20px;
     margin-left: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
    
 
   }
@@ -448,7 +452,6 @@ h2, h3{
         background-repeat: no-repeat;
         background-size: cover;
         align-items: center;
-        height: 130vh;
         display: flex;
         flex-direction: column;
         margin: 0;
@@ -456,13 +459,16 @@ h2, h3{
     
       
         .negociacao-um {
-          width: 60%;
+          width: 80%;
           padding: 10px;
           padding-top: 50px;
           margin: 0;
           margin-bottom: 30px;
           color: white;
           text-align: justify;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
         }
       
         .negociacao-text-um {
@@ -479,10 +485,11 @@ h2, h3{
           background-color: rgb(184, 179, 179);
           border: 1px solid black;
           border-radius: 25px;
-          height: 55vh;
+          height: 50vh;
           width: 200px;
           text-align: justify;
           margin-bottom: 20px;
+          padding: 20px;
           
         }
     
@@ -498,7 +505,10 @@ h2, h3{
       .dois {
         margin-top: 150px;
        }
-        
+      
+       .nyse{
+        margin-top: 70px;
+       }
     }
 
     @media screen and (max-width: 1000px){
@@ -529,6 +539,8 @@ h2, h3{
     
       
       }
+
+
       
       
       .header {
@@ -659,8 +671,9 @@ h2, h3{
           align-items: center;
           text-align: center;
           justify-content: center;
-      
           margin: auto;
+          display: flex;
+          flex-direction: column;
        
         }
       
@@ -669,8 +682,7 @@ h2, h3{
           background-color: rgb(184, 179, 179);
           border: 1px solid black;
           border-radius: 25px;
-          height: 50vh;
-          width: 100%;
+          width: 700px;
           text-align: justify;
           margin-bottom: 20px;
           
@@ -690,6 +702,16 @@ h2, h3{
           margin-top: 15px;
     
         }
+      }
+   
+      .um .bolsas-text{
+        padding-bottom: 0;
+        margin-bottom: 0;
+        height: 30vh;
+      }
+      .dois .bolsas-text{
+        padding-top: 0;
+        margin-top: 0;
       }
     
     
@@ -723,6 +745,10 @@ h2, h3{
       .b3-text .btn{
         width: 200px;
         margin-top: 15px;
+      }
+
+      .nyse{
+        margin-top: 31px;
       }
     
     
@@ -791,7 +817,7 @@ h2, h3{
     }
   
     .header-txt {
-      height: 30vh;
+    height: 95vh;
       width: 300px;
       align-items: center;
       text-align: justify;
@@ -883,30 +909,35 @@ h2, h3{
     background-repeat: no-repeat;
     background-size: cover;
     align-items: center;
-    height: 220vh;
     display: flex;
     flex-direction: column;
     margin: 0;
+    min-height: 180vh;
+    padding-bottom: 80px;
+
 
 
   
     .negociacao-um {
-      width: 80%;
       padding: 10px;
-      margin-bottom: 10px;
-      margin-bottom: 80px;
+      padding-bottom: 10px;
       color: white;
       text-align: justify;
+      display: flex;
+      flex-direction: column;
+      
+
+
+   
     }
   
     .negociacao-text-um {
-     
-      align-items: center;
-      text-align: center;
-      justify-content: center;
       display: flex;
       flex-direction: column;
-      margin: auto;
+    
+
+      
+     
    
     }
   
@@ -914,15 +945,12 @@ h2, h3{
       background-color: rgb(184, 179, 179);
       border: 1px solid black;
       border-radius: 25px;
-      height: 25vh;
-      margin: 10px;
-      width: 250px;
       text-align: justify;
-      margin-bottom: 20px;
-      
+      width: 300px;
+
     }
 
-    .negociacao-text h3 {
+    .negociacao-text h3 p {
       text-align: center;
     }
   
@@ -931,11 +959,7 @@ h2, h3{
       background-color: rgb(230, 230, 246);
     }
 
-    .btn{
-      width: 200px;
-      margin-top: 15px;
-
-    }
+  
   }
 
 
@@ -963,6 +987,7 @@ h2, h3{
   .dois{
     display: flex;
     flex-direction: column;
+    margin-top: 10px;
   }
   .bolsas .bolsas-text {
     width: 100%;
