--- a/style.css
+++ b/style.css
@@ -302,6 +302,7 @@ h2, h3 {
 .intro {
   background-color: rgb(243, 237, 237);
   margin: auto;
+  margin-top: 40px;
   width: 60%;
   padding: 70px;
   text-align: justify;
@@ -327,6 +328,7 @@ h2, h3 {
 .quiz-container {
   background-color: rgb(243, 237, 237);
   margin: auto;
+  margin-top: 40px;
   width: 80%;
   padding: 70px;
   text-align: justify;
@@ -403,6 +405,9 @@ h2, h3 {
   }
   .nyse {
     margin-top: 70px;
+  }
+  .intro {
+    margin: 50px auto;
   }
 }
 @media screen and (max-width: 1000px) {
@@ -573,6 +578,9 @@ h2, h3 {
   }
   .nyse {
     margin-top: 31px;
+  }
+  .intro {
+    margin-top: 40px;
   }
 }
 /* Estilos para telas menores ou iguais a 400px de largura */
@@ -770,5 +778,17 @@ h2, h3 {
   .b3-text .btn {
     width: 200px;
     margin-top: 15px;
+  }
+  .intro {
+    padding: 30px;
+    width: auto;
+  }
+  .quiz-container {
+    width: 200px;
+    margin-top: 15px;
+  }
+  .quiz-container button {
+    font-size: 12px;
+    padding: 5px;
   }
 }/*# sourceMappingURL=style.css.map */
