--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ body {
   transition: 0.5s;
   justify-content: center;
   display: flex;
+  cursor: pointer;
 }
 .grafico-container .grafico:hover {
   height: 500px;
